--- a/WoodBlockMaterialCM/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/WoodBlockMaterialCM/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -116,15 +116,19 @@ LodDistance6=0.000000
 LodDistance7=0.000000
 
 [EditorStartup]
-LastLevel=/Engine/Maps/Templates/Template_Default
+LastLevel=/Game/WoodMaterialLevel
 
 [AssetEditorManager]
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/WoodMaterials/M_WoodBLockMasterCM
-MRUItem1=/Game/WoodMaterials/Mann_WoodTileableNorm
-MRUItem2=/Game/WoodMaterials/Mann_WoodTileable
+MRUItem0=/Game/WoodMaterials/MannoutUV
+MRUItem1=/Game/WoodMaterials/M_WoodBLockMasterCM
+MRUItem2=/Game/WoodMaterials/CM_graphic
+MRUItem3=/Game/WoodMaterialLevel
+MRUItem4=/Engine/EngineResources/DefaultTexture
+MRUItem5=/Game/WoodMaterials/Mann_WoodTileableNorm
+MRUItem6=/Game/WoodMaterials/Mann_WoodTileable
 
 [DetailCategories]
 Texture2D.Compression=True
@@ -184,6 +188,12 @@ MaterialExpressionVectorParameter.General=True
 MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
 MaterialExpressionVectorParameter.MaterialExpression=True
 MaterialExpressionReroute.MaterialExpression=True
+MaterialExpressionAppendVector.MaterialExpression=False
+MaterialExpressionTextureObjectParameter.General=True
+MaterialExpressionTextureObjectParameter.MaterialExpressionTextureBase=True
+MaterialExpressionTextureObjectParameter.MaterialExpression=True
+MaterialExpressionAdd.MaterialExpressionAdd=True
+MaterialExpressionAdd.MaterialExpression=True
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -270,6 +280,8 @@ RecentlyPlaced=/Game/WoodBlock/Mann_WoodBlock.Mann_WoodBlock;
 /Game/WoodMaterials/Mann_WoodTileable.Mann_WoodTileable=1
 /Game/WoodMaterials/Mann_WoodTileableNorm.Mann_WoodTileableNorm=1
 /Game/WoodMaterials/M_WoodBLockMasterCM.M_WoodBLockMasterCM=1
+/Engine/EngineResources/DefaultTexture.DefaultTexture=1
+/Game/WoodMaterials/MannoutUV.MannoutUV=1
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -352,11 +364,11 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/u0957313/Documents/Unreal Projects/WoodBlockMaterialCM/Content
+UNR=../../../../../../Users/u0957313/Documents/GitHub/CM_AssetPipeLine/WoodBlockMaterialCM/Content
 BRUSH=../../../../../../Users/u0957313/Documents/Unreal Projects/WoodBlockMaterialCM/Content/
 FBX=../../../../../../Users/u0957313/Documents/Unreal Projects/WoodBlockMaterialCM/Content/
 FBXAnim=../../../../../../Users/u0957313/Documents/Unreal Projects/WoodBlockMaterialCM/Content/
-GenericImport=../../../../../../Users/u0957313/Downloads/Mann_WoodBlocks/Mann_WoodBlocks/Mann_WoodBlock.fbx
+GenericImport=../../../../../../Users/u0957313/Documents/MannoutUV.tga
 GenericExport=../../../../../../Users/u0957313/Documents/Unreal Projects/WoodBlockMaterialCM/Content/
 GenericOpen=../../../../../../Users/u0957313/Documents/Unreal Projects/WoodBlockMaterialCM/Content/
 GenericSave=../../../../../../Users/u0957313/Documents/Unreal Projects/WoodBlockMaterialCM/Content/
